app.css:Update font src; proper url; local if present
Currently the font faces are loaded always from the server. This is
inefficient if the correct font is already installed on the server. This
commit adds the relevant src changes using the correct full font names.

The specified URL for the default font is incorrect. This commit fixes
this as well by using appropriate full paths in string quotations with
suffixes.

--- a/app.css
+++ b/app.css
@@ -1,47 +1,41 @@
 @font-face {
-  font-family: 'Default' ;
-  src: url(fonts/0_default);
+  font-family: 'Default';
+  src: url('./fonts/0_default.ttf');
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
-  font-family: 'Akshar' ;
-  src: url(fonts/1_akshar.ttf);
+  font-family: 'Akshar';
+  src: local('Akshar'), url('./fonts/1_akshar.ttf');
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
   font-family: 'Kanak';
-  src: url(fonts/2_kanak.ttf);
+  src: local('Marathi-Kanak'), url('./fonts/2_kanak.ttf');
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
   font-family: 'Mangal';
-  src: url(fonts/3_mangal.ttf);
+  src: local('Mangal'), url('./fonts/3_mangal.ttf');
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
   font-family: 'Kiran';
-  src: url(fonts/4_kiran.ttf);
+  src: local('Kiran'), url('./fonts/4_kiran.ttf');
   font-weight: normal;
   font-style: normal;
-
 }
 
 @font-face {
   font-family: 'Sharada';
-  src: url(fonts/5_sharada.ttf);
+  src: local('Marathi-Sharada'), url('./fonts/5_sharada.ttf');
   font-weight: normal;
   font-style: normal;
-
 }
